# Rubiks-Cube-Solver-Using-IDA-Star-main

./: CMakeLists.txt  CentrePiece.cpp  CentrePiece.h  Colour.cpp  Colour.h  CornerPiece.cpp  CornerPiece.h  Cube.cpp  Cube.h  EdgePiece.cpp  EdgePiece.h  LICENSE  Pieces.h  README.md  Side.cpp  Side.h  main.cpp
